--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.33",
+    "supabase": "^2.74.5",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
