feat: add toast notifications and feedback for profile save

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^4.4.7"
   },
