feat: add table view for programs with toggle

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.1.0",
