--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "playwright": "^1.58.1",
     "postcss": "^8.4.33",
     "supabase": "^2.74.5",
     "tailwindcss": "^3.4.0",
