--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
+    "openai": "^6.22.0",
     "pg": "^8.18.0",
     "postgres": "^3.4.8",
     "react": "^18.2.0",
